[Completed: 81] Fix the currency selector overflow on the category page

--- a/assets/frontend/css/styles.css
+++ b/assets/frontend/css/styles.css
@@ -2599,6 +2599,11 @@ footer div.block-subscribe form button {
 }
 
 /* ----------------------------- FOOTER */
+.block-currency select {
+    width: 100%;
+}
+
+/* ----------------------------- FOOTER */
 
 footer {
     clear: both;
